// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapHelper build node deltas 1`] = `
Object {
  "attributes": Object {
    "theHeight": 100,
  },
  "deltas": Object {
    "theHeight": 33,
  },
  "depth": 1,
  "flat": false,
  "height": 100,
  "heightDelta": 33,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`treeMapHelper build node invertHeight 1`] = `
Object {
  "attributes": Object {
    "theHeight": 100,
  },
  "deltas": undefined,
  "depth": 1,
  "flat": false,
  "height": 1900,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`treeMapHelper build node minimal 1`] = `
Object {
  "attributes": Object {
    "theHeight": 100,
  },
  "deltas": undefined,
  "depth": 1,
  "flat": false,
  "height": 100,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;

exports[`treeMapHelper build node should set lowest possible height caused by other visible edge pairs 1`] = `
Object {
  "attributes": Object {
    "theHeight": 100,
  },
  "deltas": undefined,
  "depth": 1,
  "flat": true,
  "height": 2,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 2,
}
`;
